@@ -8,6 +8,7 @@ Broker:
 
 Client library:
 - Fix socketpair code on the Mac.
+- Fix compilation for WITH_THREADING=no.
 
 Clients:
 - Fix keepalive value on mosquitto_pub.
